# brass_gui

./: .gitattributes  .gitmodules  CMakeLists.txt  README.md  lv_conf.h
buildroot/: conf.sh
font/: conv.sh
lv_drivers/: CMakeLists.txt
lv_drivers/display/: fbdev.c
python/: brass.py  lv_const.py
rootfs/etc/init.d/: S99gui
rootfs/mnt/settings/: bands.yaml  hw.yaml  modes.yaml  options.yaml  rf.yaml
rootfs/mnt/settings/app/: ft8.yaml
rootfs/mnt/settings/memory/: ft4.yaml  ft8.yaml
rootfs/usr/share/brass/fw/: mb.code  mb.data
rootfs/usr/share/brass/python/: bandinfo.py  brass.py  buttons.py  clock.py  gui_const.py  info.py  msg.py  (+14 more)
sql/: band_params.csv  memory.csv
src/: CMakeLists.txt  audio.c  audio.h  audio_adc.c  audio_adc.h  backlight.c  backlight.h  band_info.c  band_info.h  bands.c  bands.h  buttons.c  buttons.h  cat.c  clock.c  clock.h  cw.c  cw.h  cw_decoder.c  cw_decoder.h  cw_encoder.c  cw_encoder.h  cw_key.c  cw_key.h  dialog.c  dialog.h  dialog_audio_settings.c  dialog_audio_settings.h  dialog_callsign.c  dialog_callsign.h  dialog_freq.c  dialog_freq.h  dialog_ft8.c  dialog_ft8.h  dialog_gps.c  dialog_gps.h  dialog_msg_cw.c  dialog_msg_cw.h  dialog_msg_voice.c  dialog_msg_voice.h  (+90 more)
src/bands/: CMakeLists.txt  bands.c  bands.h  interval.c  interval.h  list.c  list.h  tree.c  tree.h
src/dsp/: CMakeLists.txt  agc.c  agc.h  biquad.c  biquad.h  calculus.c  emnr.c  emnr.h  firdes.c  firdes.h  log10_fast.c  log10_fast.h  zeta_hat.c  zeta_hat.h
src/fonts/: CMakeLists.txt  jura.h  jura_10.c  jura_12.c  jura_14.c  jura_16.c  jura_18.c  jura_20.c  jura_22.c  jura_24.c  jura_26.c  jura_28.c  jura_30.c  jura_32.c  jura_34.c  jura_36.c  jura_38.c  jura_40.c  jura_42.c  jura_44.c  jura_60.c  jura_8.c  jura_bold_10.c  jura_bold_12.c  jura_bold_14.c  jura_bold_16.c  jura_bold_18.c  jura_bold_20.c  jura_bold_22.c  jura_bold_24.c  jura_bold_26.c  jura_bold_28.c  jura_bold_30.c  jura_bold_32.c  jura_bold_34.c  jura_bold_36.c  jura_bold_38.c  jura_bold_40.c  jura_bold_42.c  jura_bold_44.c  (+2 more)
src/fpga/: CMakeLists.txt  adc.c  adc.h  control.c  control.h  dac.c  dac.h  dma-proxy.h  fft.c  fft.h  mb.c  mb.h  mb_data.h
src/hw/: CMakeLists.txt  gpio.c  gpio.h  iio.c  iio.h  pa_bias.c  pa_bias.h  xvrt.c  xvrt.h
src/olivia/: CMakeLists.txt  buffer.h  cmpx.h  fft.h  fht.cpp  fht.h  gray.h  lowpass3.h  mfsk.h  mfsk_demodulator.cpp  mfsk_demodulator.h  mfsk_encoder.cpp  mfsk_encoder.h  mfsk_inputprocessor.cpp  mfsk_inputprocessor.h  mfsk_iterdecoder.cpp  mfsk_iterdecoder.h  mfsk_modulator.cpp  mfsk_modulator.h  mfsk_parameters.cpp  mfsk_parameters.h  mfsk_receiver.cpp  mfsk_receiver.h  mfsk_softdecoder.cpp  mfsk_softdecoder.h  mfsk_softdemodulate.cpp  mfsk_softdemodulate.h  mfsk_synchronizer.cpp  mfsk_synchronizer.h  mfsk_transmitter.cpp  mfsk_transmitter.h  olivia.cpp  olivia.h  struc.h  utils.h
src/python/: CMakeLists.txt  python.c  python.h  python_lv.c  python_lv.h  python_lv_bandinfo.c  python_lv_bandinfo.h  python_lv_btn.c  python_lv_btn.h  python_lv_finder.c  python_lv_finder.h  python_lv_grad.c  python_lv_grad.h  python_lv_hiding.c  python_lv_hiding.h  python_lv_label.c  python_lv_label.h  python_lv_object.c  python_lv_object.h  python_lv_smeter.c  python_lv_smeter.h  python_lv_spectrum.c  python_lv_spectrum.h  python_lv_spectrum3d.c  python_lv_spectrum3d.h  python_lv_style.c  python_lv_style.h  python_lv_waterfall.c  python_lv_waterfall.h  python_lv_xmeter.c  python_lv_xmeter.h  python_trx.c  python_trx.h
src/render/: CMakeLists.txt  blend.c  blend.h  draw_img_decoded.c  draw_img_decoded.h  render.c  render.h
src/settings/: CMakeLists.txt  audio.c  audio.h  bands.c  bands.h  filter.c  filter.h  ft8.c  ft8.h  hw.c  hw.h  memory.c  memory.h  modes.c  modes.h  op_work.c  op_work.h  options.c  options.h  rf.c  rf.h  rf_filter.c  rf_filter.h  rx_band.c  rx_band.h  swrscan.c  swrscan.h  tx_band.c  tx_band.h  xvrt.c  xvrt.h
src/widgets/: CMakeLists.txt  lv_bandinfo.c  lv_bandinfo.h  lv_finder.c  lv_finder.h  lv_hiding.c  lv_hiding.h  lv_smeter.c  lv_smeter.h  lv_spectrum.c  lv_spectrum.h  lv_spectrum3d.c  lv_spectrum3d.h  lv_waterfall.c  lv_waterfall.h  lv_xmeter.c  lv_xmeter.h
utils/: bitmap_1.py  bitmap_2.py  bitmaps.py
